[package]
name = "rsst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
json = "0.12.4"
log = "0.4.17"
quick-xml = "0.22.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
rusqlite = { version = "0.27.0", features = ["bundled", "array"] }
